--- a/css/style.css
+++ b/css/style.css
@@ -604,8 +604,20 @@ video {
   bottom: -2.5rem;
 }
 
-.-bottom-8 {
-  bottom: -2rem;
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .mx-auto {
@@ -621,10 +633,6 @@ video {
   display: block;
 }
 
-.inline-block {
-  display: inline-block;
-}
-
 .flex {
   display: flex;
 }
@@ -633,72 +641,80 @@ video {
   height: 100vh;
 }
 
-.h-\[1px\] {
-  height: 1px;
+.h-\[400px\] {
+  height: 400px;
 }
 
-.h-16 {
-  height: 4rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-8 {
-  height: 2rem;
+.h-\[5px\] {
+  height: 5px;
 }
 
 .h-20 {
   height: 5rem;
 }
 
-.h-\[500px\] {
-  height: 500px;
+.h-8 {
+  height: 2rem;
 }
 
-.h-\[400px\] {
-  height: 400px;
+.h-\[1px\] {
+  height: 1px;
+}
+
+.h-\[100px\] {
+  height: 100px;
 }
 
 .w-screen {
   width: 100vw;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-\[20px\] {
   width: 20px;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .w-20 {
   width: 5rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[600px\] {
+  width: 600px;
+}
+
+.w-\[10px\] {
+  width: 10px;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[175px\] {
+  width: 175px;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
 
-.w-\[800px\] {
-  width: 800px;
+.w-full {
+  width: 100%;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.min-w-\[430px\] {
+  min-width: 430px;
 }
 
 .max-w-\[500px\] {
@@ -733,6 +749,12 @@ video {
   margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
 .overflow-x-hidden {
   overflow-x: hidden;
 }
@@ -743,16 +765,6 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.bg-cyan-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(103 232 249 / var(--tw-bg-opacity));
-}
-
-.bg-neonGreen {
-  --tw-bg-opacity: 1;
-  background-color: hsl(150 100% 66% / var(--tw-bg-opacity));
 }
 
 .bg-darkBlue {
@@ -770,17 +782,21 @@ video {
   background-color: hsl(193 38% 86% / var(--tw-bg-opacity));
 }
 
-.bg-red-900 {
+.bg-neonGreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
+  background-color: hsl(150 100% 66% / var(--tw-bg-opacity));
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .p-8 {
   padding: 2rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
+.p-0 {
+  padding: 0px;
 }
 
 .text-center {
@@ -796,9 +812,14 @@ video {
   line-height: 2.25rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
 }
 
 .font-bold {
